# bb8

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
bb8_control/: controle_robo.py  gripper_server.py  odom_gt_publisher.py  scan_masker.py  vision_processor.py
behavior_trees/: navigate_no_backup.xml  navigate_with_backup.xml
config/: controller_config.yaml  explore_params.yaml  fsm_params.yaml  nav2_params.yaml  slam_toolbox.yaml
description/: robot.urdf.xacro
launch/: explore_and_catch_flag.launch.py  robot_state_publisher.launch.py  simulation.launch.py  spawn_robot.launch.py
rviz/: rviz_config.rviz
src/bb8_control/: package.xml  setup.py
src/bb8_control/bb8_control/: controle_robo.py  gripper_server.py  vision_processor.py
src/bb8_control/behavior_trees/: navigate_no_backup.xml
src/bb8_control/config/: explore_params.yaml  nav2_params.yaml  slam_toolbox.yaml
src/bb8_control/launch/: control.launch.py  full_project.launch.py  missao_nav2_launch.py  simulation_slam.launch.py
src/m-explore-ros2/.github/workflows/: build_test.yaml
src/m-explore-ros2/explore/include/explore/: frontier_search.h
src/m-explore-ros2/explore/src/: explore.cpp  frontier_search.cpp
src/prm_2026/config/: controller_config.yaml
src/prm_2026/description/: robot.urdf.xacro
src/prm_2026/launch/: carrega_robo.launch.py
src/prm_2026/prm_2026/: ground_truth_odometry.py
src/prm_2026/rviz/: rviz_config.rviz
