<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bb8_control</name>
  <version>0.0.0</version>
  <description>Exploração autônoma por fronteiras (SLAM + Nav2 + m-explore) e coleta de flag</description>
  <maintainer email="pedrolunkesvillela@usp.br">banoffee</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Stack de navegação: SLAM + Nav2 + exploração de fronteiras -->
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_rotation_shim_controller</exec_depend>
  <!-- Exploração de fronteiras: explore_lite vem do m-explore-ros2 (clonado em src/) -->
  <exec_depend>explore_lite</exec_depend>

  <!-- Ambiente de simulação: mundo + modelos vêm do prm_2026 (clonado em src/) -->
  <exec_depend>prm_2026</exec_depend>

  <!-- Simulação Gazebo (Ignition) + pontes + descrição/controle do robô -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
